updated faviconlogo image, added resume page, fixing spacing of mobile nav bar

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -87,6 +87,11 @@
         content: 'MY WORK';
       }
     }
+    a.resume-link {
+      &:after {
+        content: 'RESUME';
+      }
+    }
     a.contact-link {
       &:after {
         content: 'CONTACT';
